--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Merriweather:wght@400;700;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="banner">
+        <img src="images/Banner.png" alt="">
+        <div class="banner-text">
+            <h4>Happy New Year</h4>
+            <h1>New Year Party Celebration</h2>
+        </div>
+    </div>
+
+    <div class="new-year-banner">
+        <h2 class="off">65% OFF</h2>
+        <p class="off-title">OUR HOLIDAY DEALS ARE BETTER</p>
+        <h3 class="">ALL CATEGORIES<h3>
+                <img src="/images/New Year Photo.png" alt="">
+    </div>
+
+    <div class="banner-2">
+        <img src="/images/Vectorrr.png" alt="">
+        <div class="banner-text">
+            <h3>Welcome to midnight party</h3>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+                risus ut pellentesque vel euismod. </p>
+            <h5>Join Now</h5>
+        </div>
+    </div>
 </body>
+
 </html>
