--- a/index.html
+++ b/index.html
@@ -41,6 +41,65 @@
             <h5>Join Now</h5>
         </div>
     </div>
+
+    <div class="banner-3">
+        <img src="/images/Rectangle 2.png" alt="">
+        <div class="banner-3-text">
+            <p class="primary-black"><span class="primary-color">Place:</span>New Park Hotel <br>
+                <span class="primary-color">Date:</span>31 December Night 2023 <br>
+                <span class="primary-color">Time:</span>Evening 7.30 Pm to 12.30 Am
+            </p>
+            <button class="btn">Join now</button>
+        </div>
+    </div>
+
+    <div class="container">
+
+        <div class="container-part-1">
+            <h6>NEW BEST OFFER</h6>
+            <h4>Coming Soon</h4>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+                risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="container-part-2">
+            <img src="/images/Ellipse 1.png" alt="">
+        </div>
+        <div class="container-part-3">
+            <h4>2024</h4>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="/images/Group 96.png" alt="">
+        </div>
+    </div>
+    <div class="holiday-sale">
+        <h6>WHAT IS FUNCTIONAL</h6>
+        <h2><span class="holiday-color">Holidays</span> Sale 50%</h2>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+            fermentum amet amet sit consectetur.</p>
+    </div>
+
+    <div class="discount-container">
+        <img class="boundary" src="images/Rectangle 2.png" alt="">
+        <img class="gift" src="/images/Group 75.png" alt="">
+        <!-- <img  clas="woman" src="/images/Rectangle 1.png" alt=""> -->
+    </div>
+
+    <div class="portfolio">
+        <h6>THE BEST GIFTS</h6>
+        <h3>Our Awesome Portfolio</h3>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+            risus ut pellentesque vel euismod. </p>
+    </div>
+
+    <div class="image-container">
+        <div class="image-item"><img src="/images/Rectangle 3.png" alt="Image 1"></div>
+        <div class="image-item"><img src="/images/Rectangle 4.png" alt="Image 2"></div>
+        <div class="image-item"><img src="/images/Rectangle 5.png" alt="Image 3"></div>
+        <div class="image-item"><img src="image4.jpg" alt="Image 4"></div>
+        <div class="image-item"><img src="image5.jpg" alt="Image 5"></div>
+        <div class="image-item"><img src="image6.jpg" alt="Image 6"></div>
+      </div>
+
 </body>
 
 </html>
