--- a/index.html
+++ b/index.html
@@ -95,10 +95,54 @@
         <div class="image-item"><img src="/images/Rectangle 3.png" alt="Image 1"></div>
         <div class="image-item"><img src="/images/Rectangle 4.png" alt="Image 2"></div>
         <div class="image-item"><img src="/images/Rectangle 5.png" alt="Image 3"></div>
-        <div class="image-item"><img src="image4.jpg" alt="Image 4"></div>
-        <div class="image-item"><img src="image5.jpg" alt="Image 5"></div>
-        <div class="image-item"><img src="image6.jpg" alt="Image 6"></div>
-      </div>
+        <div class="image-item"><img src="/images/Rectangle 6.png" alt="Image 4"></div>
+        <div class="image-item"><img src="/images/Rectangle 7.png" alt="Image 5"></div>
+        <div class="image-item"><img src="/images/Rectangle 8.png" alt="Image 6"></div>
+    </div>
+
+    <div class="subscriber">
+        <img src="/images/Group 61.png" alt="">
+        <h3>Subscribe Newsletter</h3>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
+            risus
+            ut pellentesque vel euismod.</p>
+        <div class="small-container">
+            <h5>fahim@gmail.com</h5>
+            <button>Subscribe</button>
+        </div>
+    </div>
+
+    <div class="footer-container">
+        <div class="footer-row-1">
+            <div class="area-contact">
+                <p>44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div class="footer-row-1">
+                <div class="social-contact">
+                    <a href=""><img src="/images/Call.png" alt="">+00 123 584 124</a>
+                    <a href=""><img src="/images/Website.png" alt="">www.website.com</a>
+                </div>
+            </div>
+            <hr>
+            <div class="social-links">
+                <a href=""><img src="/images/Facebook.png" alt=""></a>
+                <a href=""><img src="/images/Instagram.png" alt=""></a>
+                <a href=""><img src="/images/Twitter.png" alt=""></a>
+                <a href=""><img src="/images/Linkedin.png" alt=""></a>
+            </div>
+            <hr>
+            <div class="footer-row-2">
+                <div class="right-reserved">
+                    <p>2017, All Rights Reserved.</p>
+                </div>
+                <div class="footer-row-2">
+                    <div class="unsubscribe">
+                        <p>Unsubscribe</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 </body>
 
