--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="banner-2">
-        <img src="/images/Vectorrr.png" alt="">
+        <img src="images/Vectorrr.png" alt="">
         <div class="banner-text">
             <h3>Welcome to midnight party</h3>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
@@ -42,7 +42,7 @@
     </div>
 
     <div class="banner-3">
-        <img src="/images/Rectangle 2.png" alt="">
+        <img src="images/Rectangle 2.png" alt="">
         <div class="banner-3-text">
             <p class="primary-black"><span class="primary-color">Place:</span>New Park Hotel <br>
                 <span class="primary-color">Date:</span>31 December Night 2023 <br>
@@ -61,12 +61,12 @@
                 risus ut pellentesque vel euismod. </p>
         </div>
         <div class="container-part-2">
-            <img src="/images/Ellipse 1.png" alt="">
+            <img src="images/Ellipse 1.png" alt="">
         </div>
         <div class="container-part-3">
             <h4>2024</h4>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-            <img src="/images/Group 96.png" alt="">
+            <img src="images/Group 96.png" alt="">
         </div>
     </div>
     <div class="holiday-sale">
@@ -79,7 +79,7 @@
 
     <div class="discount-container">
         <img class="boundary" src="images/Rectangle 2.png" alt="">
-        <img class="gift" src="/images/Group 75.png" alt="">
+        <img class="gift" src="images/Group 75.png" alt="">
         <!-- <img  clas="woman" src="/images/Rectangle 1.png" alt=""> -->
     </div>
 
@@ -91,16 +91,16 @@
     </div>
 
     <div class="image-container">
-        <div class="image-item"><img src="/images/Rectangle 3.png" alt="Image 1"></div>
-        <div class="image-item"><img src="/images/Rectangle 4.png" alt="Image 2"></div>
-        <div class="image-item"><img src="/images/Rectangle 5.png" alt="Image 3"></div>
-        <div class="image-item"><img src="/images/Rectangle 6.png" alt="Image 4"></div>
-        <div class="image-item"><img src="/images/Rectangle 7.png" alt="Image 5"></div>
-        <div class="image-item"><img src="/images/Rectangle 8.png" alt="Image 6"></div>
+        <div class="image-item"><img src="images/Rectangle 3.png" alt="Image 1"></div>
+        <div class="image-item"><img src="images/Rectangle 4.png" alt="Image 2"></div>
+        <div class="image-item"><img src="images/Rectangle 5.png" alt="Image 3"></div>
+        <div class="image-item"><img src="images/Rectangle 6.png" alt="Image 4"></div>
+        <div class="image-item"><img src="images/Rectangle 7.png" alt="Image 5"></div>
+        <div class="image-item"><img src="images/Rectangle 8.png" alt="Image 6"></div>
     </div>
 
     <div class="subscriber">
-        <img src="/images/Group 61.png" alt="">
+        <img src="images/Group 61.png" alt="">
         <h3>Subscribe Newsletter</h3>
         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
             risus
@@ -119,16 +119,16 @@
             </div>
             <div class="footer-row-1">
                 <div class="social-contact">
-                    <a href=""><img src="/images/Call.png" alt="">+00 123 584 124</a>
-                    <a href=""><img src="/images/Website.png" alt="">www.website.com</a>
+                    <a href=""><img src="images/Call.png" alt="">+00 123 584 124</a>
+                    <a href=""><img src="images/Website.png" alt="">www.website.com</a>
                 </div>
             </div>
             <hr>
             <div class="social-links">
-                <a href=""><img src="/images/Facebook.png" alt=""></a>
-                <a href=""><img src="/images/Instagram.png" alt=""></a>
-                <a href=""><img src="/images/Twitter.png" alt=""></a>
-                <a href=""><img src="/images/Linkedin.png" alt=""></a>
+                <a href=""><img src="images/Facebook.png" alt=""></a>
+                <a href=""><img src="images/Instagram.png" alt=""></a>
+                <a href=""><img src="images/Twitter.png" alt=""></a>
+                <a href=""><img src="images/Linkedin.png" alt=""></a>
             </div>
             <hr>
             <div class="footer-row-2">
