--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h3>Welcome to midnight party</h3>
             <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales
                 risus ut pellentesque vel euismod. </p>
-            <h5>Join Now</h5>
+            <button class="button">Join Now</button>
         </div>
     </div>
 
